# gashapon

./: .cursorrules  .gitignore  .npmrc  Anchor.toml  BUSINESS_MODEL.md  Cargo.toml  DEPLOY_DEVNET.md  DEPLOY_NOW.md  DEVNET_SOL_GUIDE.md  MULTI_GAME_ARCHITECTURE.md  ORDER_FLOW.md  PHANTOM_WALLET_SETUP.md  QUICK_START_MULTI_GAMES.md  QUICK_START_PHANTOM.md  README.md  REINITIALIZE_GAME.md  SETUP_FIX.md  TESTING_DEVNET.md  TOKEN_ACCOUNTS_EXPLAINED.md  TREASURY_SETUP.md  TREASURY_USAGE.md  TREASURY_VS_AUTHORITY.md  WITHDRAWAL_GUIDE.md  backend.checklist.md  convert-phantom-key.js  fix-anchor-solana.sh  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.md  run-tests.sh  solana.checklist.md  start-dev.sh  tsconfig.json
assets/: README.md  game-prizes-tracker.csv
backend/: ENV_SETUP.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  MIGRATIONS.md  README.md  SUPABASE_SETUP.md  USER_TABLE_EXPLANATION.md  package.json  tsconfig.json
frontend/: DESIGN_SYSTEM.md  FRONTEND_STRUCTURE.md  NEON_EFFECTS_GUIDE.md  SETUP_SUMMARY.md  jest.config.js  middleware.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  tailwind.config.js  vercel.json
gashapon-indexer/: README.md  SETUP.md  package.json  tsconfig.json
programs/gachapon-game/: Cargo.toml
programs/gachapon-game/src/: lib.rs
programs/gachapon-marketplace/: Cargo.toml
programs/gachapon-marketplace/src/: lib.rs
scripts/: calculate-prize-probabilities.ts  check-game-treasury.ts  clear-production-db.ts  convert-phantom-key.js  copy-idl.js  create-game.ts.example  create-treasury.sh  (+7 more)
(+245 files in other folders)
